--- a/tutorial/ch02-surface/Cargo.toml
+++ b/tutorial/ch02-surface/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+env_logger = "0.11.3"
+log        = "0.4.22"
+wgpu       = "22.0.0"
+winit      = "0.30.4"
