--- a/tutorial/ch02-surface/Cargo.toml
+++ b/tutorial/ch02-surface/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 env_logger = "0.11.3"
 log        = "0.4.22"
+pollster = "0.3.0"
 wgpu       = "22.0.0"
 winit      = "0.30.4"
