--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 ch01-window   = { path = "./tutorial/ch01-window" }
 ch02-surface  = { path = "./tutorial/ch02-surface" }
 ch03-pipeline = { path = "./tutorial/ch03-pipeline" }
+ch04-buffer   = { path = "./tutorial/ch04-buffer" }
 
 [workspace]
 
