--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ ch01-window   = { path = "./tutorial/ch01-window" }
 ch02-surface  = { path = "./tutorial/ch02-surface" }
 ch03-pipeline = { path = "./tutorial/ch03-pipeline" }
 ch04-buffer   = { path = "./tutorial/ch04-buffer" }
+ch05-indice   = { path = "./tutorial/ch05-indice" }
 
 [workspace]
 
