tutorial/ch06-textureをcliで実行できるように

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ ch02-surface  = { path = "./tutorial/ch02-surface" }
 ch03-pipeline = { path = "./tutorial/ch03-pipeline" }
 ch04-buffer   = { path = "./tutorial/ch04-buffer" }
 ch05-indice   = { path = "./tutorial/ch05-indice" }
+ch06-texture  = { path = "./tutorial/ch06-texture" }
 
 [workspace]
 
