--- a/tutorial/ch06-texture/Cargo.toml
+++ b/tutorial/ch06-texture/Cargo.toml
@@ -10,3 +10,4 @@ pollster   = "0.3.0"
 wgpu       = "22.0.0"
 winit      = "0.30.4"
 bytemuck   = { version = "1.16.1", features = ["derive"] }
+image      = "0.25.2"
