--- a/tutorial/ch06-texture/Cargo.toml
+++ b/tutorial/ch06-texture/Cargo.toml
@@ -11,3 +11,4 @@ wgpu       = "22.0.0"
 winit      = "0.30.4"
 bytemuck   = { version = "1.16.1", features = ["derive"] }
 image      = "0.25.2"
+anyhow     = "1.0.86"
