--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ ch06-texture  = { path = "./tutorial/ch06-texture" }
 [workspace]
 
 members = [
+  "life-game",
   "tutorial/ch01-window",
   "tutorial/ch02-surface",
   "tutorial/ch03-pipeline",
