--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,11 @@ ch06-texture  = { path = "./tutorial/ch06-texture" }
 [workspace]
 
 members = [
-  "life-game",
   "tutorial/ch01-window",
   "tutorial/ch02-surface",
   "tutorial/ch03-pipeline",
   "tutorial/ch04-buffer",
   "tutorial/ch05-indice",
   "tutorial/ch06-texture",
+  "tutorial/life-game",
 ]
