--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ ch04-buffer   = { path = "./tutorial/ch04-buffer" }
 ch05-indice   = { path = "./tutorial/ch05-indice" }
 ch06-texture  = { path = "./tutorial/ch06-texture" }
 life-game     = { path = "./tutorial/life-game" }
+hello-glyphon = { path = "./tutorial/hello-glyphon" }
 rect-renderer = { path = "./prototype/rect-renderer" }
 
 [workspace]
