--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ ch06-texture  = { path = "./tutorial/ch06-texture" }
 life-game     = { path = "./tutorial/life-game" }
 hello-glyphon = { path = "./tutorial/hello-glyphon" }
 rect-renderer = { path = "./prototype/rect-renderer" }
+text-renderer = { path = "./prototype/text-renderer" }
 
 [workspace]
 
