--- a/prototype/text-renderer/Cargo.toml
+++ b/prototype/text-renderer/Cargo.toml
@@ -11,3 +11,4 @@ wgpu        = "22.0.0"
 winit       = "0.30.4"
 bytemuck    = { version = "1.16.1", features = ["derive"] }
 cosmic-text = "0.12.1"
+etagere     = "0.2.13"
