--- a/prototype/text-renderer/Cargo.toml
+++ b/prototype/text-renderer/Cargo.toml
@@ -13,3 +13,4 @@ bytemuck    = { version = "1.16.1", features = ["derive"] }
 cosmic-text = "0.12.1"
 etagere     = "0.2.13"
 swash       = "0.1.18"
+ttf-parser  = "0.24.1"
