add rusttype, png

--- a/prototype/text-renderer/Cargo.toml
+++ b/prototype/text-renderer/Cargo.toml
@@ -14,3 +14,5 @@ cosmic-text = "0.12.1"
 etagere     = "0.2.13"
 swash       = "0.1.18"
 ttf-parser  = "0.24.1"
+png         = "0.17.13"
+rusttype    = "0.9.3"
