--- a/lib/wgpu_helper/Cargo.toml
+++ b/lib/wgpu_helper/Cargo.toml
@@ -4,11 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow     = "1.0.89"
-bytemuck   = "1.18.0"
-cgmath     = "0.18.0"
-pollster   = "0.3.0"
-serde      = { version = "1.0.210", features = ["derive"] }
-serde_json = "1.0.128"
-wgpu       = "22.1.0"
-winit      = "0.30.5"
+anyhow            = "1.0.89"
+bytemuck          = "1.18.0"
+cgmath            = "0.18.0"
+futures-intrusive = "0.5.0"
+gif               = "0.13.1"
+pollster          = "0.3.0"
+serde             = { version = "1.0.210", features = ["derive"] }
+serde_json        = "1.0.128"
+wgpu              = "22.1.0"
+winit             = "0.30.5"
