WIP: window描画には成功、gif生成には失敗

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ text-renderer     = { path = "./prototype/text-renderer" }
 with_gif          = { path = "./prototype/with_gif" }
 cube_blinn_phong  = { path = "./practice/cube_blinn_phong" }
 rotate_cube_basic = { path = "./practice/rotate_cube_basic" }
+pollster          = "0.3.0"
 
 [workspace]
 
