--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,20 +4,21 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ch01-window       = { path = "./tutorial/ch01-window" }
-ch02-surface      = { path = "./tutorial/ch02-surface" }
-ch03-pipeline     = { path = "./tutorial/ch03-pipeline" }
-ch04-buffer       = { path = "./tutorial/ch04-buffer" }
-ch05-indice       = { path = "./tutorial/ch05-indice" }
-ch06-texture      = { path = "./tutorial/ch06-texture" }
-life-game         = { path = "./tutorial/life-game" }
-hello-glyphon     = { path = "./tutorial/hello-glyphon" }
-rect-renderer     = { path = "./prototype/rect-renderer" }
-text-renderer     = { path = "./prototype/text-renderer" }
-with_gif          = { path = "./prototype/with_gif" }
-cube_blinn_phong  = { path = "./practice/cube_blinn_phong" }
-rotate_cube_basic = { path = "./practice/rotate_cube_basic" }
-pollster          = "0.3.0"
+ch01-window        = { path = "./tutorial/ch01-window" }
+ch02-surface       = { path = "./tutorial/ch02-surface" }
+ch03-pipeline      = { path = "./tutorial/ch03-pipeline" }
+ch04-buffer        = { path = "./tutorial/ch04-buffer" }
+ch05-indice        = { path = "./tutorial/ch05-indice" }
+ch06-texture       = { path = "./tutorial/ch06-texture" }
+life-game          = { path = "./tutorial/life-game" }
+hello-glyphon      = { path = "./tutorial/hello-glyphon" }
+rect-renderer      = { path = "./prototype/rect-renderer" }
+text-renderer      = { path = "./prototype/text-renderer" }
+with_gif           = { path = "./prototype/with_gif" }
+with_gif_life_game = { path = "./with_gif/life_game" }
+cube_blinn_phong   = { path = "./practice/cube_blinn_phong" }
+rotate_cube_basic  = { path = "./practice/rotate_cube_basic" }
+pollster           = "0.3.0"
 
 [workspace]
 
@@ -27,6 +28,7 @@ members = [
   "prototype/rect-renderer",
   "prototype/text-renderer",
   "prototype/with_gif",
+  "with_gif/life_game",
   "tutorial/ch01-window",
   "tutorial/ch02-surface",
   "tutorial/ch03-pipeline",
