--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ ch06-texture          = { path = "./tutorial/ch06-texture" }
 life-game             = { path = "./tutorial/life-game" }
 hello-glyphon         = { path = "./tutorial/hello-glyphon" }
 compute_single_thread = { path = "./tutorial/compute_single_thread" }
+compute_atomic_add    = { path = "./tutorial/compute_atomic_add" }
 rect-renderer         = { path = "./prototype/rect-renderer" }
 text-renderer         = { path = "./prototype/text-renderer" }
 with_gif              = { path = "./prototype/with_gif" }
@@ -39,6 +40,7 @@ members = [
   "tutorial/hello-glyphon",
   "tutorial/life-game",
   "tutorial/compute_single_thread",
+  "tutorial/compute_atomic_add",
   "practice/cube_blinn_phong",
   "practice/rotate_cube_basic",
 ]
