--- a/tutorial/compute_atomic_add/Cargo.toml
+++ b/tutorial/compute_atomic_add/Cargo.toml
@@ -8,3 +8,5 @@ env_logger        = "0.11.5"
 wgpu              = "22.1.0"
 wgpu_helper       = { path = "../../lib/wgpu_helper" }
 futures-intrusive = "0.5.0"
+bytemuck          = "1.19.0"
+num-traits        = "0.2.19"
