--- a/instanced_cube_sphere_torus/direction_light_1/Cargo.toml
+++ b/instanced_cube_sphere_torus/direction_light_1/Cargo.toml
@@ -11,6 +11,6 @@ enum-rotate = "0.1.1"
 env_logger  = "0.11.5"
 wgpu        = "22.1.0"
 winit       = "0.30.5"
-wgpu_helper = { path = "../../lib/wgpu_helper" }
+wgsim       = { path = "../../lib/wgsim" }
 pollster    = "0.3.0"
 rand        = "0.8.5"
