--- a/lib/wgsim/Cargo.toml
+++ b/lib/wgsim/Cargo.toml
@@ -8,6 +8,7 @@ bytemuck          = "1.18.0"
 cgmath            = "0.18.0"
 futures-intrusive = "0.5.0"
 gif               = "0.13.1"
+indicatif         = "0.17.8"
 pollster          = "0.3.0"
 wgpu              = "22.1.0"
 winit             = "0.30.5"
