--- a/tutorial/compute_texture_grid/Cargo.toml
+++ b/tutorial/compute_texture_grid/Cargo.toml
@@ -9,4 +9,4 @@ wgpu              = "22.1.0"
 wgsim             = { path = "../../lib/wgsim" }
 futures-intrusive = "0.5.0"
 bytemuck          = "1.19.0"
-num-traits        = "0.2.19"
+png               = "0.17.14"
