--- a/tutorial/glyph_geometry_2d/Cargo.toml
+++ b/tutorial/glyph_geometry_2d/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bytemuck   = "1.19.0"
-env_logger = "0.11.5"
-wgpu       = "22.1.0"
-wgsim      = { path = "../../lib/wgsim" }
-meshtext   = "0.3.1"
+bytemuck    = "1.19.0"
+env_logger  = "0.11.5"
+wgpu        = "22.1.0"
+wgsim       = { path = "../../lib/wgsim" }
+meshtext    = "0.3.1"
+winit       = "0.30.5"
+enum-rotate = "0.1.1"
