--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ compute_visualize_workgroup_global            = { path = "./tutorial/compute_vis
 compute_visualize_workgroup_local             = { path = "./tutorial/compute_visualize_workgroup_local" }
 compute_mandelbrot_set                        = { path = "./tutorial/compute_mandelbrot_set" }
 shader_step_rect                              = { path = "./shader_art/shader_step_rect" }
+image_blur                                    = { path = "./image_processing/image_blur" }
 rect-renderer                                 = { path = "./prototype/rect-renderer" }
 text-renderer                                 = { path = "./prototype/text-renderer" }
 with_gif                                      = { path = "./prototype/with_gif" }
@@ -56,6 +57,7 @@ members = [
   "tutorial/compute_mandelbrot_set",
   "tutorial/glyph_geometry_2d",
   "shader_art/shader_step_rect",
+  "image_processing/image_blur",
   "practice/cube_blinn_phong",
   "practice/rotate_cube_basic",
   "instanced_cube_sphere_torus/base",
