--- a/image_processing/image_blur/Cargo.toml
+++ b/image_processing/image_blur/Cargo.toml
@@ -9,3 +9,4 @@ env_logger = "0.11.5"
 wgpu       = "22.1.0"
 wgsim      = { path = "../../lib/wgsim" }
 image      = "0.25.5"
+winit      = "0.30.5"
