--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ compute_visualize_workgroup_local             = { path = "./tutorial/compute_vis
 compute_mandelbrot_set                        = { path = "./tutorial/compute_mandelbrot_set" }
 shader_step_rect                              = { path = "./shader_art/shader_step_rect" }
 image_blur                                    = { path = "./image_processing/image_blur" }
-image_averaging_filter                        = { path = "./image_processing/image_averaging_filter" }
+image_average_filter                          = { path = "./image_processing/image_average_filter" }
 rect-renderer                                 = { path = "./prototype/rect-renderer" }
 text-renderer                                 = { path = "./prototype/text-renderer" }
 with_gif                                      = { path = "./prototype/with_gif" }
@@ -59,7 +59,7 @@ members = [
   "tutorial/glyph_geometry_2d",
   "shader_art/shader_step_rect",
   "image_processing/image_blur",
-  "image_processing/image_averaging_filter",
+  "image_processing/image_average_filter",
   "practice/cube_blinn_phong",
   "practice/rotate_cube_basic",
   "instanced_cube_sphere_torus/base",
